Add REST API /transfers path (#93)
